--- a/deploy.agent.install.yml
+++ b/deploy.agent.install.yml
@@ -7,6 +7,7 @@
     # VARIAVEL DE URL_ZABBIX
     - url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm
     - zbx_srv: 192.168.3.110
+    - zbx_proxy: 192.168.3.130
   roles:
     
     - role: zabbix_agent_linux
