--- a/deploy.yml
+++ b/deploy.yml
@@ -1,8 +1,6 @@
 - name: Playbook de Instalação e Implementação Zabbix 3 Camadas Usando Rocky Linux8.
   hosts:
     - zabbix
-    - zbx_proxy
-    #- DC01
         
   vars:
     
@@ -23,14 +21,15 @@
     - url_partition: "mysql -h 192.168.3.120 -u zabbix_server -pzabbix zabbix < /opt/zbx_db_part.sql"
 
 
-    # VARIAVEL DE API URL  
     # VARIAVEL HOSTNAME DO ZABBIX PROXY
     - url_zabbix_api: http://192.168.3.100/zabbix/
     - username: 'Admin'
     - password: 'zabbix'
     - zbx_srv: 192.168.3.110
     - proxy_name: 'zbx_proxy'
-    
+    - host_template: 'Linux by Zabbix agent active'  
+    - host_grupo: 'Zabbix servers'
+
     # VARIAVEL DE URL_ZABBIX
     - url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm 
       
@@ -81,19 +80,15 @@
   
   roles:
    
-     #- role: Common_Linux
-     #- role: db_zabbix
-     #  when: ansible_host == zbx_db
-     - role: zabbix_server
-       when: ansible_host == zbx_srv
-     #- role: zabbix_front
-     #  when: ansible_host == zbx_front
-     #- role: zabbix_agent_linux
-     #  when: ansible_host == zbx_front
-     #- role: zabbix_agent_linux
-     #  when: ansible_host == zbx_db
-     #- role: grafana_server
-     #  when: ansible_host == zbx_front
-     #- role: zabbix_proxy
-       #when: ansible_host == zbx_proxy
-       #- role:  api_add_linux
+    #- role: Common_Linux
+    #- role: db_zabbix
+    #  when: ansible_host == zbx_db
+    #- role: zabbix_server
+    #  when: ansible_host == zbx_srv
+    #- role: zabbix_front
+    #  when: ansible_host == zbx_front
+    #- role: zabbix_proxy
+    #  when: ansible_host == zbx_proxy
+    #- role: grafana_server
+    #  when: ansible_host == zbx_front
+    #- role: zabbix_agent_linux
