--- a/roles/api_add_linux/tasks/main.yml
+++ b/roles/api_add_linux/tasks/main.yml
@@ -4,15 +4,15 @@
 - name: Criando hosts no zabbix forma Automatica.
   local_action:
     module: community.zabbix.zabbix_host
-    server_url: http://192.168.3.100/zabbix/
-    login_user: Admin
-    login_password: zabbix
+    server_url: '{{ url_zabbix_api }}'
+    login_user: '{{ username }}'
+    login_password: '{{ password }}'
     host_name: "{{ansible_fqdn}}"
     visible_name: "{{ansible_fqdn}}"
     host_groups:
-      - Zabbix servers
+      - '{{ host_grupo }}'
     link_templates:
-      - Linux by Zabbix agent active
+      - '{{ host_template }}'
     status: enabled
     state: present
     inventory_mode: automatic
