--- a/roles/zabbix_front/vars/main.yml
+++ b/roles/zabbix_front/vars/main.yml
@@ -1,6 +1,21 @@
 ---
 # vars file for install_zabbix_front
 
+
+# CONFIGURAÇÃO DO FRONTEND DO ZABBIX
+zbx_port: 10051
+zbx_name: Monitor_Ansible
+zbx_web: 'zabbix'
+
+# LISTA DE PACOTES INSTALAR FRONTEND
+packages_zabbix_frontend:
+        - mysql
+        - zabbix-agent2 
+        - zabbix-apache-conf
+        - zabbix-web-mysql
+        - httpd
+        - zabbix-web-service
+
 # timezone: America/Sao_Paulo
 
 # db_name: 'zabbix'
