--- a/deploy.add.proxy.yml
+++ b/deploy.add.proxy.yml
@@ -6,7 +6,7 @@
    - username: 'Admin'
    - password: 'zabbix'
    - zbx_srv: 192.168.3.110
-   - proxy_name: 'zbx_proxy'
+   - proxy_name: 'zabbixproxy'
    - zbx_proxy: 192.168.3.130
 
   roles:
