--- a/deploy.create.hosts.linux.yml
+++ b/deploy.create.hosts.linux.yml
@@ -9,7 +9,7 @@
    - username: 'Admin'
    - password: 'zabbix'
    - zbx_srv: 192.168.3.110
-   - proxy_name: 'zbx_proxy'
+   - proxy_name: 'zabbixproxy'
    - zbx_proxy: 192.168.3.130
    - host_template: 'Linux by Zabbix agent active'
    - host_grupo: 'Zabbix servers' 
