--- a/roles/grafana_server/tasks/grafana.yml
+++ b/roles/grafana_server/tasks/grafana.yml
@@ -16,6 +16,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 #----------------------------------------------------------------------------------------------#
 - name: Instalando pacotes grafana-server
+  #shell: "yum install grafana-8.3.0-1.x86_64.rpm -y"
   shell: "yum install grafana-8.2.5-1.x86_64.rpm -y"
   tags: grafana-server
   when: ansible_facts['distribution_major_version'] == "8"
