--- a/roles/zabbix_proxy/vars/main.yml
+++ b/roles/zabbix_proxy/vars/main.yml
@@ -1,4 +1,16 @@
 ---
 # vars file for zabbix-proxy
 
+url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm
+
+# VARIAVEL HOSTNAME DO ZABBIX PROXY
+url_zabbix_api: http://192.168.3.100/zabbix/
+username: 'Admin'
+password: 'zabbix'
+zbx_srv: 192.168.3.110
+proxy_name: 'zabbixproxy'
+host_template: 'Linux by Zabbix agent active'  
+host_grupo: 'Zabbix servers'
+
+# PACOTES DE INSTALL PROXY
 packages_zabbix_proxy: zabbix-proxy-sqlite3
