--- a/roles/zabbix_agent_linux/tasks/agent.key.yml
+++ b/roles/zabbix_agent_linux/tasks/agent.key.yml
@@ -17,6 +17,14 @@
   tags: zabbix_agent2
   when: ansible_facts['distribution_major_version'] == "8"
 # # --------------------------------------------------------------------------------------------#
+- name: Iniciar/ Habilitar zabbix-agent2
+  systemd:
+    name: zabbix-agent2
+    state: started
+    enabled: yes
+  tags: zabbix_agent2
+  when: ansible_facts['distribution_major_version'] == "8"
+#-------------------------------------------------------------------------------#
 - name: SSH | Setando configurações de segurança no arquivo zabbix_agent2.conf
   lineinfile:
     dest: /etc/zabbix/zabbix_agent2.conf
@@ -30,6 +38,12 @@
     - { regexp: "^Hostname=Zabbix server", line: "Hostname={{ ansible_fqdn }}" }
     - { regexp: "# Timeout=3", line: "Timeout=30" }
     - { regexp: "# DenyKey=system.run[*]", line: "AllowKey=system.run[*]" }
+        # Modo Ativo habilitar opção abaixo.
+    #- { regexp: '# TLSConnect=unencrypted', line: 'TLSConnect=psk' }
+      # Modo Passivo habilitando opção abaixo.
+    - { regexp: '# TLSAccept=unencrypted', line: 'TLSAccept=psk' }
+    - { regexp: '# TLSPSKIdentity=', line: 'TLSPSKIdentity=zabbix' }
+    - { regexp: '# TLSPSKFile=', line: 'TLSPSKFile=/etc/zabbix/keys/agent.psk' }
   tags: zabbix_agent2
   when: ansible_facts['distribution_major_version'] == "8"
 
@@ -44,14 +58,14 @@
   tags: zabbix_agent2
   when: ansible_facts['distribution_major_version'] == "8"
 # ----------------------------------------------------------------------------------------------#
-- name: Iniciar/ Habilitar zabbix-agent2
+- name: Realizar Restart zabbix-agent2
   systemd:
     name: zabbix-agent2
-    state: started
+    state: restarted
     enabled: yes
   tags: zabbix_agent2
   when: ansible_facts['distribution_major_version'] == "8"
-#-------------------------------------------------------------------------------#
+#------------------------------------------------------------------------------------------------#
 - name: Reload no firewalld
   systemd:
     name: firewalld
@@ -60,31 +74,6 @@
   tags: zabbix_agent2
   when: ansible_facts['distribution_major_version'] == "8"
 # -------------------------------------------------------------------------------------------#
-- name: Criando hosts no zabbix forma Automatica.
-  local_action:
-    module: community.zabbix.zabbix_host
-    server_url: '{{ url_zabbix_api }}'
-    login_user: '{{ username }}'
-    login_password: '{{ password }}'
-    host_name: "{{ansible_fqdn}}"
-    visible_name: "{{ansible_fqdn}}"
-    host_groups:
-      - '{{ host_grupo }}'
-    link_templates:
-      - '{{ host_template }}'
-    status: enabled
-    state: present
-    inventory_mode: automatic
-    interfaces:
-      - type: '1'
-        main: 1
-        useip: 1
-        ip: "{{ ansible_all_ipv4_addresses[0]}}"
-        dns: ""
-        port: "10050"
-    proxy: '{{ proxy_name }}'
-  tags: api_zabbix
-  when: ansible_facts['distribution_major_version'] == "8"
 
 ...
 
