--- a/roles/zabbix_proxy/tasks/proxy.key.bkp.yml
+++ b/roles/zabbix_proxy/tasks/proxy.key.bkp.yml
@@ -1,16 +1,21 @@
 ---
 # tasks file for zabbix-proxy
 - name: Adcionando Repositorio Zabbix Proxy.
-  dnf: name='{{ url_packages_zabbix }}' state=present
+  dnf:
+    name: '{{ url_packages_zabbix }}'
+    state: present
   ignore_errors: yes
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 # --------------------------------------------------------------------------------------------#
 #
 - name: Instalando pacotes zabbix-proxy
-  dnf: name='{{ packages_zabbix_proxy }}' state=latest
+  dnf:
+    name: '{{ packages_zabbix_proxy }}'
+    state: latest
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
+#-------------------------------------------------------------------------------------------------#
 #--------------------------------------------------------------------------------------------#
 - name: Criar diretorio banco sqlite3
   file:
@@ -59,19 +64,24 @@
     - { regexp: '# CacheSize=8M', line: 'CacheSize=256M' }
     - { regexp: '^Timeout=4', line: 'Timeout=30' }
     - { regexp: '# TLSConnect=unencrypted', line: 'TLSConnect=psk' }
-    - { regexp: '# TLSAccept=unencrypted', line: 'TLSAccept=psk' }
-    - { regexp: '# TLSPSKIdentity=', line: 'TLSPSKIdentity={{ psk_identity }}' }
+    #- { regexp: '# TLSAccept=unencrypted', line: 'TLSAccept=psk' }
+    - { regexp: '# TLSPSKIdentity=', line: 'TLSPSKIdentity={{ proxy_name}}' }
     - { regexp: '# TLSPSKFile=', line: 'TLSPSKFile=/etc/zabbix/proxy.psk' }
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #-----------------------------------------------------------------------------------------------#
 - name: ZBX PROXY | Realizar Restart do  Zabbix Proxy.
-  systemd: name=zabbix-proxy state=started enabled=yes
+  systemd:
+    name: zabbix-proxy
+    state: restarted
+    enabled: yes
   tags: zabbix_proxy 
   when: ansible_facts['distribution_major_version'] == "8"
 #----------------------------------------------------------------------------------------------#
 - name: Instalando pacote zabbix-agent2
-  dnf: name='{{ packages_zabbix_agent }}' state=latest
+  dnf:
+    name: '{{ packages_zabbix_agent }}'
+    state: latest
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------#
@@ -88,11 +98,20 @@
     - { regexp: "^Hostname=Zabbix server", line: "Hostname={{ ansible_fqdn }}" }
     - { regexp: "# Timeout=3", line: "Timeout=30" }
     - { regexp: "# DenyKey=system.run[*]", line: "AllowKey=system.run[*]" }
+    #     # Modo Ativo habilitar opção abaixo.
+    # - { regexp: '# TLSConnect=unencrypted', line: 'TLSConnect=psk' }
+    #   # Modo Passivo habilitando opção abaixo.
+    # - { regexp: '# TLSAccept=unencrypted', line: 'TLSAccept=psk' }
+    # - { regexp: '# TLSPSKIdentity=', line: 'TLSPSKIdentity=zabbix_agent' }
+    # - { regexp: '# TLSPSKFile=', line: 'TLSPSKFile=/etc/zabbix/keys/agent.psk' }
   tags: zabbix_agent2
   when: ansible_facts['distribution_major_version'] == "8"
 #------------------------------------------------------------------------------------------------#
-- name: Restart zabbix-agent2
-  systemd: name=zabbix-agent2 state=restarted enabled=yes
+- name: Iniciar/ Habilitar zabbix-agent2
+  systemd:
+    name: zabbix-agent2
+    state: started
+    enabled: yes
   tags: zabbix_proxy
   when: ansible_facts['distribution_major_version'] == "8"
 #-------------------------------------------------------------------------------------#
@@ -125,32 +144,8 @@
     state: present
     proxy_address: '{{ zbx_proxy }}'
     tls_accept: PSK
-    tls_psk_identity: '{{ psk_identity }}'
+    tls_psk_identity: '{{ zbx_proxy }}'
     tls_psk: "{{ psk }}"  
   when: ansible_facts['distribution_major_version'] == "8"
+
 #-----------------------------------------------------------------------------------#
-- name: Criando Proxy no Frontend do zabbix .
-  local_action:
-    module: community.zabbix.zabbix_host
-    server_url: '{{ url_zabbix_api }}'
-    login_user: '{{ username }}'
-    login_password: '{{ password }}'
-    host_name: "{{ansible_fqdn}}"
-    visible_name: "{{ansible_fqdn}}"
-    host_groups:
-      - '{{ host_grupo }}'
-    link_templates:
-      - '{{ host_template }}'
-    status: enabled
-    state: present
-    inventory_mode: automatic
-    interfaces:
-      - type: '1'
-        main: 1
-        useip: 1
-        ip: "{{ ansible_all_ipv4_addresses[0]}}"
-        dns: ""
-        port: "10050"
-    proxy: '{{ proxy_name }}'
-  tags: api_zabbix
-  when: ansible_facts['distribution_major_version'] == "8"
