--- a/roles/zabbix_server/tasks/server.key.yml
+++ b/roles/zabbix_server/tasks/server.key.yml
@@ -23,6 +23,27 @@
     enabled: yes
   tags: zabbix_server
   when: ansible_facts['distribution_major_version'] == "8"
+# #----------------------------------------------------------------------------------------------#
+#
+- name: ZBX SRV | Adcionado Porta firewalld  Zabbix_Server/Zabbix_Agent
+  firewalld:
+    port: "{{ item }}"
+    permanent: yes
+    state: enabled
+  loop:
+    - 10051/tcp
+    - 10050/tcp
+    - 3306/tcp  
+  tags: zabbix_server
+  when: ansible_facts['distribution_major_version'] == "8"
+# ----------------------------------------------------------------------------------------------#
+- name: FIREWALL | Reload no firewalld
+  systemd:
+    name: firewalld
+    state: reloaded
+    enabled: yes
+  tags: zabbix_server
+  when: ansible_facts['distribution_major_version'] == "8"
 #-------------------------------------------------------------------------------#
 - name: ZBX SRV | Setando configurações de segurança no arquivo zabbix_server.conf
   lineinfile:
@@ -112,27 +133,7 @@
   when: ansible_facts['distribution_major_version'] == "8"
 
 # --------------------------------------------------------------------------------------------#
-- name: ZBX SRV | Adcionado Porta firewalld  Zabbix_Server/Zabbix_Agent
-  firewalld:
-    port: "{{ item }}"
-    permanent: yes
-    state: enabled
-  loop:
-    - 10051/tcp
-    - 10050/tcp
-    - 3306/tcp  
-  tags: zabbix_server
-  when: ansible_facts['distribution_major_version'] == "8"
-# ----------------------------------------------------------------------------------------------#
-- name: FIREWALL | Reload no firewalld
-  systemd:
-    name: firewalld
-    state: reloaded
-    enabled: yes
-  tags: zabbix_server
-  when: ansible_facts['distribution_major_version'] == "8"
-#-------------------------------------------------------------------------------------------------#
-- name: ZBX SRV | Iniciar/ Restart Zabbix-Server / Agent2
+- name: ZBX SRV | Iniciar/ Restart Zabbix-Server
   systemd:
     name: "{{ item }}"
     state: restarted
