--- a/deploy.agent.install.yml
+++ b/deploy.agent.install.yml
@@ -1,14 +1,24 @@
-- name: Playbook de Criação de hosts no Zabbix
+- name: Playbook de instalação do Agentes de hosts no Zabbix /  Proxy
   hosts:
+
     - zbx_front
     - zbx_db
-    - zbx_proxy
+
   vars:
     # VARIAVEL DE URL_ZABBIX
     - url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm
+    - url_zabbix_api: http://192.168.3.100/zabbix/
+    - username: 'Admin'
+    - password: 'zabbix'
     - zbx_srv: 192.168.3.110
+    - proxy_name: 'zabbixproxy'
     - zbx_proxy: 192.168.3.130
-    
+    - host_template: 'Linux by Zabbix agent active'
+    - host_grupo: 'Zabbix servers' 
+    - zbx_srv: 192.168.3.110   
+    - zbx_proxy: 192.168.3.130
+
   roles:
     
     - role: zabbix_agent_linux
+
