--- a/roles/zabbix_proxy/handlers/main.yml
+++ b/roles/zabbix_proxy/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for zabbix-proxy
+
+# - name: Restart Zabbix Proxy
+#   systemd: name=zabbix-proxy state=restarted enabled=yes
+  
+# - name: Reload firewalld
+#   systemd: name=firewalld state=reloaded enabled=yes
